--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
-/.idea/*
+.idea/
 __pycache__
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
